ci(build): 设置构建环境编码以解决 Windows 问题
在 Windows 环境下，Python 标准输出可能因编码问题导致构建失败。通过设置 PYTHONIOENCODING 环境变量并尝试在脚本中重配置标准流编码，确保构建过程能正确处理 UTF-8 字符。

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
         pip install pyinstaller
 
     - name: Build Application
+      env:
+        PYTHONIOENCODING: utf-8
       run: |
         python build_script.py
 
