build: 迁移构建系统至Nuitka并添加Windows打包脚本
- 将CI工作流中的构建工具从PyInstaller切换为Nuitka以生成更小更快的可执行文件
- 新增build_nuitka.py脚本，支持Windows和macOS平台，包含自动Python环境检测
- 添加一键打包.bat脚本方便Windows用户本地构建
- 在requirements.txt中添加packaging依赖以满足Nuitka编译需求
- 调整CI中构建产物上传路径以匹配Nuitka输出格式

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,29 +35,31 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pyinstaller
+        pip install nuitka
 
     - name: Build Windows
       if: matrix.os == 'windows-latest'
       env:
         PYTHONIOENCODING: utf-8
       run: |
-        python build_script.py --onefile
+        python build_nuitka.py
 
     - name: Build macOS
       if: matrix.os == 'macos-latest'
       run: |
-        python build_script.py
-        # Compress .app to zip for release
+        python build_nuitka.py
+        # Compress binary to zip for release
         cd dist
-        zip -r WorkOrderSystem_Mac_App.zip *.app
+        # Nuitka on mac generates a binary file, not .app unless specified.
+        # Our build_nuitka.py generates *mac.bin
+        zip -r WorkOrderSystem_Mac.zip *_mac.bin
 
     - name: Upload Artifacts (Windows)
       if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v4
       with:
         name: Windows-Build
-        path: dist/*.exe
+        path: "*.exe"
         if-no-files-found: error
 
     - name: Upload Artifacts (macOS)
@@ -66,8 +68,8 @@ jobs:
       with:
         name: macOS-Build
         path: |
-          dist/*.dmg
           dist/*.zip
+          *_mac.bin
         if-no-files-found: error
 
     - name: Create Release
@@ -75,8 +77,8 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          dist/*.exe
-          dist/*.dmg
+          *.exe
+          *_mac.bin
           dist/*.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
