--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,11 +48,10 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         python build_nuitka.py
-        # Compress binary to zip for release
-        cd dist
-        # Nuitka on mac generates a binary file, not .app unless specified.
-        # Our build_nuitka.py generates *mac.bin
-        zip -r WorkOrderSystem_Mac.zip *_mac.bin
+        # Create DMG using hdiutil (standard macOS tool)
+        hdiutil create -volname "WorkOrderSystem" -srcfolder "WorkOrderSystem.app" -ov -format UDZO "WorkOrderSystem.dmg"
+        # Zip the .app for alternative distribution
+        zip -r WorkOrderSystem_App.zip WorkOrderSystem.app
 
     - name: Upload Artifacts (Windows)
       if: matrix.os == 'windows-latest'
@@ -68,8 +67,8 @@ jobs:
       with:
         name: macOS-Build
         path: |
-          dist/*.zip
-          *_mac.bin
+          *.dmg
+          *.zip
         if-no-files-found: error
 
     - name: Create Release
@@ -78,7 +77,7 @@ jobs:
       with:
         files: |
           *.exe
-          *_mac.bin
-          dist/*.zip
+          *.dmg
+          *.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
