ci: 改进 macOS 构建流程以支持动态应用名称
- 在 GitHub Actions 工作流中，使用动态查找和变量来创建 DMG 和 ZIP 文件，而非硬编码的应用名称。
- 修改 Nuitka 构建脚本，使 macOS 应用包名称包含版本号，并自动重命名默认生成的 'main.app'。
- 这确保了构建产物名称的一致性，并便于版本管理。

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,10 +48,20 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         python build_nuitka.py
+        
+        # Find the generated .app bundle
+        APP_PATH=$(find . -maxdepth 1 -name "*.app" -type d | head -n 1)
+        APP_NAME=$(basename "$APP_PATH" .app)
+        
+        echo "Found app: $APP_PATH"
+        echo "App Name: $APP_NAME"
+        
         # Create DMG using hdiutil (standard macOS tool)
-        hdiutil create -volname "WorkOrderSystem" -srcfolder "WorkOrderSystem.app" -ov -format UDZO "WorkOrderSystem.dmg"
+        hdiutil create -volname "$APP_NAME" -srcfolder "$APP_PATH" -ov -format UDZO "$APP_NAME.dmg"
+        
         # Zip the .app for alternative distribution
-        zip -r WorkOrderSystem_App.zip WorkOrderSystem.app
+        # Use -r for recursive and -y to preserve symlinks (important for macOS apps)
+        zip -r -y "$APP_NAME.zip" "$APP_PATH"
 
     - name: Upload Artifacts (Windows)
       if: matrix.os == 'windows-latest'
