ci: 添加 *.app 到构建产物上传列表
确保 macOS 应用程序包在发布时被正确归档和上传。

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,6 +79,7 @@ jobs:
         path: |
           *.dmg
           *.zip
+          *.app
         if-no-files-found: error
 
     - name: Create Release
