ci: 修复 macOS 构建环境下的编码和重命名问题
- 在 GitHub Actions 的 macOS 构建任务中设置 LC_ALL 和 LANG 环境变量，确保 UTF-8 编码。
- 修改 macOS 构建脚本，不再通过 Nuitka 的 `--macos-app-name` 参数指定包含中文字符的应用名，以避免潜在的编码处理问题。
- 改进 .app 包的查找和重命名逻辑，使其更健壮，能处理 Nuitka 可能生成的不同默认包名。

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,9 @@ jobs:
 
     - name: Build macOS
       if: matrix.os == 'macos-latest'
+      env:
+        LC_ALL: en_US.UTF-8
+        LANG: en_US.UTF-8
       run: |
         python build_nuitka.py
         
