--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,11 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, macos-latest]
+    
+    env:
+      PYTHONIOENCODING: utf-8
+      LC_ALL: en_US.UTF-8
+      LANG: en_US.UTF-8
 
     steps:
     - name: Checkout code
@@ -40,16 +45,11 @@ jobs:
 
     - name: Build Windows
       if: matrix.os == 'windows-latest'
-      env:
-        PYTHONIOENCODING: utf-8
       run: |
         python build_nuitka.py
 
     - name: Build macOS
       if: matrix.os == 'macos-latest'
-      env:
-        LC_ALL: en_US.UTF-8
-        LANG: en_US.UTF-8
       run: |
         python build_nuitka.py
         
@@ -88,11 +88,8 @@ jobs:
 
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
+      uses: ncipollo/release-action@v1
       with:
-        files: |
-          *.exe
-          *.dmg
-          *.zip
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        artifacts: "*.exe,*.dmg,*.zip"
+        token: ${{ secrets.GITHUB_TOKEN }}
+        allowUpdates: true
