ci: 更新构建脚本路径以匹配项目结构调整
- 将 .github/workflows/build.yml 中的构建命令从 python build_nuitka.py 更新为 python scripts/build_nuitka.py
- 同步更新 scripts/build_script.py 中的示例命令和配置文件路径，确保版本提交时正确添加 src/core/config.py

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,12 +46,12 @@ jobs:
     - name: Build Windows
       if: matrix.os == 'windows-latest'
       run: |
-        python build_nuitka.py
+        python scripts/build_nuitka.py
 
     - name: Build macOS
       if: matrix.os == 'macos-latest'
       run: |
-        python build_nuitka.py
+        python scripts/build_nuitka.py
         
         # Find the generated .app bundle
         APP_PATH=$(find . -maxdepth 1 -name "*.app" -type d | head -n 1)
